[tool.poetry]
name = "ghpr"
version = "0.1.0"
description = "Simple Github PR Puller"
license = "MIT"
authors = ["Thomas J Fan <thomasjpfan@gmail.com>"]

[tool.poetry.scripts]
ghpr = "ghpr:main"

[tool.poetry.dependencies]
python = ">=3.6"
PyGithub = ">=1.51"
GitPython = ">=3.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
